Fixed the bugs on the pong game and on flappy bird. Made some breakpoints fot the home page, the header and the navigation to make them responsive. But thos games are only in desktop versions for now

--- a/src/styles/1.Base/_global.scss
+++ b/src/styles/1.Base/_global.scss
@@ -1,4 +1,11 @@
 @import "../2.Utils/variables";
+
+@media screen and (min-width: 1025px) {
+    body {
+        overflow: hidden;
+    }
+}
+
 *,
 *::after,
 *::before {
@@ -10,11 +17,13 @@ body {
     background-color: $bg-clr-1;
     height: 100vh;
     width: 100%;
-    overflow: hidden;
 }
 h1 {
     font-family: "main-fonts";
 }
 a {
     text-decoration: none;
+}
+ul {
+    list-style: none;
 }
