--- a/src/styles/3.Components/homePage/_gameCard.scss
+++ b/src/styles/3.Components/homePage/_gameCard.scss
@@ -4,7 +4,7 @@
     align-items: center;
     border: 3px solid $bg-clr-3;
     border-radius: 5px;
-    padding: 5px 10px;
+    padding: 8px;
     &__img-container {
         overflow: hidden;
         width: 100%;
