--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import "./1.Base/global";
 @import "./2.Utils/variables";
 @import "./3.Components/header";
+@import "./3.Components/navigation";
 @import "./3.Components/flappyBirdPage/flappyBirdHeader";
 @import "./3.Components/homePage/gameCard";
 @import "./3.Components/homePage/sectionGames";
