--- a/src/styles/2.Utils/_variables.scss
+++ b/src/styles/2.Utils/_variables.scss
@@ -6,7 +6,7 @@
 }
 
 $bg-clr-1: rgb(16, 16, 16);
-$bg-clr-2: rgba(140, 140, 140, 0.1);
+$bg-clr-2: rgb(39, 39, 39);
 $bg-clr-3: rgba(140, 140, 140, 0.3);
 $bg-clr-4: rgb(39, 36, 36);
 
