--- a/src/styles/3.Components/homePage/_sectionGames.scss
+++ b/src/styles/3.Components/homePage/_sectionGames.scss
@@ -1,6 +1,30 @@
+@media screen and (min-width: 1025px) {
+    .games {
+        width: 80%;
+        &-container {
+            grid-template-columns: repeat(4, 1fr);
+        }
+    }
+}
+@media screen and (max-width: 1024px) {
+    .games {
+        width: 90%;
+        &-container {
+            margin-bottom: 50px;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+        }
+    }
+}
+@media screen and (max-width: 767px) {
+    .games-container {
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: 1fr;
+    }
+}
+
 .games {
     position: relative;
-    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +36,6 @@
         position: relative;
         width: 100%;
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
         gap: 25px;
     }
 }
