fixed the bug on the header hiding the top of the flappy bird canvas

--- a/src/styles/4.Pages/_flappy-bird.scss
+++ b/src/styles/4.Pages/_flappy-bird.scss
@@ -1,6 +1,9 @@
 .flappy-bird {
-    position: relative;
-    transform: translateY(-80px);
+    z-index: 10000;
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
     margin: 0;
     text-align: center;
     user-select: none;
