--- a/src/styles/3.Components/tetrisPage/_tetrisHeader.scss
+++ b/src/styles/3.Components/tetrisPage/_tetrisHeader.scss
@@ -4,6 +4,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 25px;
         h3 {
             font-family: "txt-fonts";
             text-transform: uppercase;
