--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import "./1.Base/fonts";
 @import "./1.Base/global";
+@import "./2.Utils/keyframes";
 @import "./2.Utils/variables";
 @import "./3.Components/header";
 @import "./3.Components/navigation";
