--- a/src/styles/3.Components/homePage/_sectionIntro.scss
+++ b/src/styles/3.Components/homePage/_sectionIntro.scss
@@ -6,6 +6,14 @@
     h1 {
         font-family: "main-fonts";
         font-size: 10vh;
+        @for $i from 1 through 8 {
+            span:nth-child(#{$i}) {
+                opacity: 0;
+                animation: letterAnim 0.6s ease-in forwards;
+                animation-delay: $i * 0.15s;
+                display: inline-block;
+            }
+        }
     }
     .bg-circle {
         position: absolute;
@@ -14,5 +22,7 @@
         border-radius: 50%;
         background-color: $bg-clr-2;
         z-index: -1;
+        transform: scale(0);
+        animation: grow 0.3s ease-in forwards;
     }
 }
